--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,16 @@
 			<version>2.8.5</version>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>com.amazonaws</groupId>-->
+<!--			<artifactId>amazon-kinesis-client</artifactId>-->
+<!--			<version>1.11.2</version>-->
+<!--		</dependency>-->
+
 		<dependency>
-			<groupId>com.amazonaws</groupId>
-			<artifactId>amazon-kinesis-client</artifactId>
-			<version>1.11.2</version>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream-binder-kinesis</artifactId>
+			<version>2.2.0</version>
 		</dependency>
 
 		<!-- Utilery -->
