--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,23 @@
 			<version>1.11.2</version>
 		</dependency>
 
+		<!-- Feign -->
+		<dependency>
+			<groupId>io.github.openfeign</groupId>
+			<artifactId>feign-okhttp</artifactId>
+			<version>11.10</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.openfeign</groupId>
+			<artifactId>feign-gson</artifactId>
+			<version>11.10</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.openfeign</groupId>
+			<artifactId>feign-slf4j</artifactId>
+			<version>11.10</version>
+		</dependency>
+
 		<!-- Utilery -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
